Fixed house picture on mobile layouts

--- a/css/_common.scss
+++ b/css/_common.scss
@@ -12,7 +12,7 @@ $highlight-purple: #25084C;
 	Size Definitions
 */
 
-$small-screen : 555px; 
+$small-screen : 768px; 
 
 /* 
 	Mixins used through out
