--- a/css/_front-page.scss
+++ b/css/_front-page.scss
@@ -105,6 +105,13 @@
 	background-image: url('house-slice-2.png');
 }
 
+@media(max-width: $small-screen) {
+	.house-pic {
+		min-height: 300px;
+		background-position: 0px -175px;
+	}
+}
+
 /*
 	Social Media
 */
